Fixed tile picker size on narrow screens

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -1223,7 +1223,7 @@ textarea {
 		box-shadow: 0px 0px 32px black;
 
 		&>.content {
-			width: 45vw;
+			width: #{"max(45vw, 500px)"};
 			max-height: 70vh;
 		}
 	}
